## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

## compile library

noinst_LTLIBRARIES = libforests.la 

libforests_la_SOURCES = \
	../defines.h \
	../mdd_hash.h \
	mt.h            mt.cc \
	mtmdd.h         mtmdd.cc \
  mtmddbool.h     mtmddbool.cc \
  mtmddint.h      mtmddint.cc \
  mtmddreal.h     mtmddreal.cc \
	mtmxd.h         mtmxd.cc \
  mtmxdbool.h     mtmxdbool.cc \
  mtmxdint.h      mtmxdint.cc \
  mtmxdreal.h     mtmxdreal.cc \
	evmdd.h \
	evmdd.cc
