## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

## compile library

## noinst_LTLIBRARIES = libforests.la 

## libforests_la_SOURCES = \
  ## ../defines.h \
  ## mt.h            mt.cc \
  ## mtmdd.h         mtmdd.cc \
  ## mtmddbool.h     mtmddbool.cc \
  ## mtmddint.h      mtmddint.cc \
  ## mtmddreal.h     mtmddreal.cc \
  ## mtmxd.h         mtmxd.cc \
  ## mtmxdbool.h     mtmxdbool.cc \
  ## mtmxdint.h      mtmxdint.cc \
  ## mtmxdreal.h     mtmxdreal.cc \
  ## ev.h                ev.cc \
  ## evmdd.h             evmdd.cc \
  ## evmdd_plusint.h     evmdd_plusint.cc \
  ## evmxd.h             evmxd.cc \
  ## evmxd_timesreal.h   evmxd_timesreal.cc 
##  evmddold.h \
##  evmddold.cc
