## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

## compile library

noinst_LTLIBRARIES = libops.la 

libops_la_SOURCES = \
	../meddly.h \
	../meddly_expert.h \
	../defines.h \
	../compute_cache.h \
  init_builtin.h    init_builtin.cc \
  apply_base.h      apply_base.cc   \
  \
  copy.h            copy.cc         \
	cardinality.h     cardinality.cc  \
  complement.h      complement.cc   \
  maxmin_range.h    maxmin_range.cc \
  mdd2evplus.h      mdd2evplus.cc   \
  \
  cross.h           cross.cc        \
  multiply.h        multiply.cc     \
  comp_eq.h         comp_eq.cc      \
  comp_ne.h         comp_ne.cc      \
  comp_lt.h         comp_lt.cc      \
  comp_le.h         comp_le.cc      \
  comp_gt.h         comp_gt.cc      \
  comp_ge.h         comp_ge.cc      \
  \
	operation.cc \
	operation_ext.h   operation_ext.cc \
	reachability.h    reachability.cc \
  prepostimage.h    prepostimage.cc \
  mpz_object.h      mpz_object.cc \
  vect_matr.h       vect_matr.cc 


