## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

## compile library

noinst_LTLIBRARIES = libops.la 

libops_la_SOURCES = \
  init_builtin.h    init_builtin.cc \
  apply_base.h      apply_base.cc   \
  \
  copy.h            copy.cc         \
	cardinality.h     cardinality.cc  \
  complement.h      complement.cc   \
  maxmin_range.h    maxmin_range.cc \
  mdd2evplus.h      mdd2evplus.cc   \
  \
  union.h           union.cc        \
  intersection.h    intersection.cc \
  difference.h      difference.cc   \
  cross.h           cross.cc        \
  \
  maxmin.h          maxmin.cc       \
  plus.h            plus.cc         \
  minus.h           minus.cc        \
  multiply.h        multiply.cc     \
  divide.h          divide.cc       \
  \
  comp_eq.h         comp_eq.cc      \
  comp_ne.h         comp_ne.cc      \
  comp_lt.h         comp_lt.cc      \
  comp_le.h         comp_le.cc      \
  comp_gt.h         comp_gt.cc      \
  comp_ge.h         comp_ge.cc      \
  \
  prepostimage.h    prepostimage.cc \
	reachability.h    reachability.cc \
  mpz_object.h      mpz_object.cc \
  vect_matr.h       vect_matr.cc \
  \
	operation.cc \
	operation_ext.h   operation_ext.cc 


