## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

## compile library

noinst_LTLIBRARIES = libops.la 

libops_la_SOURCES = \
  init_builtin.h    init_builtin.cc \
  apply_base.h      apply_base.cc   \
  mpz_object.h      mpz_object.cc   \
  \
  copy.h            copy.cc         \
  cardinality.h     cardinality.cc  \
  complement.h      complement.cc   \
  maxmin_range.h    maxmin_range.cc \
  mdd2index.h       mdd2index.cc    \
  \
  union.h           union.cc        \
  intersection.h    intersection.cc \
  difference.h      difference.cc   \
  cross.h           cross.cc        \
  \
  maxmin.h          maxmin.cc       \
  plus.h            plus.cc         \
  minus.h           minus.cc        \
  multiply.h        multiply.cc     \
  divide.h          divide.cc       \
  modulo.h          modulo.cc       \
  \
  comp_eq.h         comp_eq.cc      \
  comp_ne.h         comp_ne.cc      \
  comp_lt.h         comp_lt.cc      \
  comp_le.h         comp_le.cc      \
  comp_gt.h         comp_gt.cc      \
  comp_ge.h         comp_ge.cc      \
  \
  prepostimage.h    prepostimage.cc \
  reach_bfs.h       reach_bfs.cc    \
  reach_dfs.h       reach_dfs.cc    \
  sat_pregen.h      sat_pregen.cc   \
  sat_otf.h         sat_otf.cc      \
  \
  vect_matr.h       vect_matr.cc    \
  \
  mm_mult.h         mm_mult.cc

