## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

## compile library

noinst_LTLIBRARIES = libreordering.la 

libreordering_la_SOURCES = \
  reorder_type.h \
  reordering_base.h  \
  highest_inversion_reordering.h \
  lowest_inversion_reordering.h \
  sink_down_reordering.h \
  bubble_up_reordering.h \
  lowest_cost_reordering.h \
  lowest_memory_reordering.h \
  random_reordering.h \
  LARC_reordering.h \
  reordering_factory.h