## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

## compile library

noinst_LTLIBRARIES = libstorage.la 

libstorage_la_SOURCES = \
  ../defines.h \
  holeman.h       holeman.cc \
  hm_grid.h       hm_grid.cc \
  old_scheme.h    old_scheme.cc \
  compact.h       compact.cc
