## $Id$

## Makefile.am -- Process this file with automake to produce Makefile.in

## compile library

noinst_LTLIBRARIES = libstorage.la 

libstorage_la_SOURCES = \
  ../defines.h \
  bytepack.h  \
  holeman.h       holeman.cc \
  hm_array.h      hm_array.cc \
  hm_grid.h       hm_grid.cc \
  hm_heap.h       hm_heap.cc \
  old_scheme.h    old_scheme.cc \
  simple.h        simple.cc \
  compact.h       compact.cc
